# netcdfkit

./: .bumpver.toml  API_REFERENCE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  release.bat  release.sh
scripts/: fix_lint.py
src/netcdfkit/: __init__.py  logger.py  ncPntExtractor.py  ncPolyExtraction.py  nc_point.py  point_extractor.py  polygon_extractor.py
tests/: test_nc_point.py  test_nc_polygon.py  test_netcdfkit.py
